--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          Tale
+title:          sometimez
 paginate:       5
-baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+baseurl:        "/sometimez0"
+url:            "https://sometimez.github.io"
 
 # Assets
 sass:
@@ -17,9 +17,9 @@ markdown:       kramdown
 
 # About
 author:
-  name:         Chester How
+  name:         sometimes 
   url:          http://chester.how
-  email:        chesterhow@gmail.com
+  email:        projectsometimes@gmail.com
 
 # Custom vars
 version:        3.4.1
